Add Java 8 compatibility helper for Java 9+ APIs (#21)
* Fix Java 1.8 compatibility

Replace Java 9+ APIs with Java 8 equivalents:
- String.isBlank() → isEmpty() with trim() check
- String.formatted() → String.format()
- Files.readString() → Files.readAllBytes() + String constructor
- Files.writeString() → Files.write()
- Stream.toList() → Stream.collect(Collectors.toList())
- List.of() → Arrays.asList()
- Objects.requireNonNullElse() → ternary operator

This allows the plugin to compile and run on Java 1.8+.

* Extract Java 1.8 compatibility layer into helper class

Create Java8CompatibilityHelper to centralize wrapper methods for Java 9+ APIs:
- isBlank(String) - wrapper for String.isBlank() (Java 11+)
- formatted(String, Object...) - wrapper for String.formatted() (Java 15+)
- readString(Path) - wrapper for Files.readString() (Java 11+)
- writeString(Path, String, Charset) - wrapper for Files.writeString() (Java 11+)
- toList(Stream) - wrapper for Stream.toList() (Java 16+)
- listOf(Object...) - wrapper for List.of() (Java 9+)
- requireNonNullElse(T, T) - wrapper for Objects.requireNonNullElse() (Java 9+)

Replace all inline compatibility checks with calls to helper methods throughout:
- AiPromptSupport
- AiFieldGenerationSupport
- AiGenerationProviderFactory
- AiMdDocumentCodec
- AiMdHeaderCodec
- AiMdHeaderSupport
- GenerateMojo
- SourceFileIndexer
- PackageIndexer

This improves code maintainability and makes compatibility handling explicit
and easy to update in one place.

* Refactor Java 8 compatibility layer for easier future upgrades

Keep null checks explicit in calling code instead of hiding them in helpers.
This allows simple text replacement when upgrading to newer Java versions.

Changes:
- Modify Java8CompatibilityHelper.isBlank() to not handle nulls
  (requires caller to check: X == null || Helper.isBlank(X))
- Remove requireNonNullElse from helper (use ternary operators instead)
- Update all call sites to use pattern: X == null || Helper.isBlank(X)